crates/lang/tests/ui/trait_def/fail/message_input_non_codec.rs
use ink_lang as ink;

pub struct NonCodec;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message)]
    fn message(&self, input: NonCodec);
}

fn main() {}
