crates/lang/tests/ui/trait_def/fail/message_input_non_codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeDecode` is not satisfied
  --> tests/ui/trait_def/fail/message_input_non_codec.rs:8:23
   |
8  |     fn message(&self, input: NonCodec);
   |                       ^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodec`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodec`
note: required by a bound in `DispatchInput`
  --> src/codegen/dispatch/type_check.rs
   |
   |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0599]: the method `fire` exists for struct `ink_env::call::CallBuilder<<T as ContractEnv>::Env, Set<<<T as ContractEnv>::Env as Environment>::AccountId>, Unset<u64>, Unset<<<T as ContractEnv>::Env as Environment>::Balance>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>`, but its trait bounds were not satisfied
  --> tests/ui/trait_def/fail/message_input_non_codec.rs:7:5
   |
7  | /     #[ink(message)]
8  | |     fn message(&self, input: NonCodec);
   | |_______________________________________^ method cannot be called on `ink_env::call::CallBuilder<<T as ContractEnv>::Env, Set<<<T as ContractEnv>::Env as Environment>::AccountId>, Unset<u64>, Unset<<<T as ContractEnv>::Env as Environment>::Balance>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |   pub struct ArgumentList<Head, Rest> {
   |   ----------------------------------- doesn't satisfy `_: Encode`
   |
   = note: the following trait bounds were not satisfied:
           `ArgumentList<ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`

error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
  --> tests/ui/trait_def/fail/message_input_non_codec.rs:7:5
   |
7  | /     #[ink(message)]
8  | |     fn message(&self, input: NonCodec);
   | |_______________________________________^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodec`
note: required by a bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
  --> $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |         T: scale::Encode,
   |            ^^^^^^^^^^^^^ required by this bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
